<resources>
    <string name="app_name">时序预测</string>
    <string name="粘贴兑奖">粘贴兑奖</string>
    <string name="今日开奖">今日开奖</string>
    <string name="排五">排五</string>
    <string name="排列5兑奖">排列5兑奖</string>
    <string name="七星彩">七星彩</string>
    <string name="七星彩兑奖">七星彩兑奖</string>
    <string name="大乐透">大乐透</string>
    <string name="大乐透兑奖">大乐透兑奖</string>
    <string name="双色球">双色球</string>
    <string name="双色球兑奖">双色球兑奖</string>
    <string name="快乐8">快乐8</string>
    <string name="快乐8兑奖">快乐8兑奖</string>
    <string name="paste_prize_claim_title">粘贴兑奖</string>
    <string name="enter_prize_code">请粘贴你的号码</string>
    <string name="claim_prize">兑奖</string>
    <string name="clear">清空</string>
    <string name="获取开奖数据">获取开奖数据</string>
    <string name="分析号码">分析号码</string>
    <string name="结果将显示在这里">结果将显示在这里</string>

</resources>
